added facebook sdk login and custom logo images

--- a/RecipeMatch/Info.plist
+++ b/RecipeMatch/Info.plist
@@ -2,6 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>app-logo.png</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb809834930215296</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>809834930215296</string>
+	<key>FacebookClientToken</key>
+	<string>205b2222c7ae47c21523c21fee20f9b7</string>
+	<key>FacebookDisplayName</key>
+	<string>RecipeMatcher</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
